k8s/dynamic-data-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dynamic-data-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dynamic-data-deployment
  template:
    metadata:
      labels:
        app: dynamic-data-deployment
    spec:
      containers:
        - name: dynamic-data-deployment
          image: asia-southeast1-docker.pkg.dev/buildify-388906/buildify-registry/dynamic-data:18
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
            - containerPort: 443
          resources:
            limits:
              cpu: 100m
              memory: 100Mi
