k8s/file-mgt-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: file-mgt-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: file-mgt-deployment
  template:
    metadata:
      labels:
        app: file-mgt-deployment
    spec:
      containers:
        - name: file-mgt-deployment
          image: asia-southeast1-docker.pkg.dev/thesis-378216/buildify-registry/file-mgt:1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 100m
              memory: 100Mi
