k8s/gen-code-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gen-code-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gen-code-deployment
  template:
    metadata:
      labels:
        app: gen-code-deployment
    spec:
      containers:
        - name: gen-code-deployment
          image: asia-southeast1-docker.pkg.dev/thesis-378216/buildify-registry/gen-code:1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
            - containerPort: 443
          resources:
            limits:
              cpu: 100m
              memory: 300Mi
