k8s/dynamic-data-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dynamic-data-service
spec:
  selector:
    app: dynamic-data-deployment
  ports:
  - port: 80
    name: gateway
    protocol: TCP
    targetPort: 80
  - port: 443
    name: grpc
    protocol: TCP
    targetPort: 443
