k8s/file-mgt-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: file-mgt-service
spec:
  selector:
    app: file-mgt-deployment
  ports:
  - port: 80
    name: http
    protocol: TCP
    targetPort: 80
