k8s/gen-code-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gen-code-service
spec:
  selector:
    app: gen-code-deployment
  ports:
  - port: 80
    name: gateway
    protocol: TCP
    targetPort: 80
  - port: 443
    name: grpc
    protocol: TCP
    targetPort: 443
