k8s/user-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  selector:
    app: user-deployment
  ports:
  - port: 80
    name: gateway
    protocol: TCP
    targetPort: 80
  - port: 443
    name: grpc
    protocol: TCP
    targetPort: 443
